# inventory-system

./: README.md  TECHNICAL_SPEC.md  main.py  pyproject.toml  schemas.py
backend/: database.py  main.py  models.py
backend/routers/: employees.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  types.ts  utils.jsx  utils.tsx
frontend/src/__tests__/: Items.test.tsx  routes.test.tsx
frontend/src/api/: client.js  client.ts
frontend/src/components/: Modal.jsx  Modal.tsx  Sidebar.jsx  Sidebar.tsx
frontend/src/pages/: Alerts.jsx  Alerts.tsx  Dashboard.jsx  Dashboard.tsx  Items.jsx  Items.tsx  Movements.jsx  Movements.tsx  Setup.jsx  Setup.tsx
routers/: alerts.py  categories.py  dashboard.py  items.py  locations.py  movements.py  suppliers.py
