[project]
name = "tambo"
version = "0.1.0"
description = "Industrial Inventory Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.scripts]
tambo = "main:run"
